# OC_P12_EPIC_EVENTS

./: .env  .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini  requirements.freeze  requirements.txt
django_config/: asgi.py  settings.py  urls.py  wsgi.py
epic_events/: apps.py  permissions.py
epic_events/forms/: collaborator.py  company.py  contract.py  customer.py  department.py  event.py  location.py  search.py
epic_events/migrations/: 0001_initial.py  0002_alter_collaborator_groups_and_more.py  0003_remove_collaborator_date_joined_and_more.py  0004_collaborator_slug.py  0005_rename_slug_name_company_slug_and_more.py  0006_customer_slug.py  0007_alter_collaborator_department_contract.py  0008_contract_slug_alter_company_slug_and_more.py  0009_alter_contract_customer.py  0010_location.py  0011_alter_contract_amount_paid_and_more.py  0012_event.py  0013_location_slug_form.py  0014_alter_event_end_date_alter_event_start_date_and_more.py  0015_alter_event_contract_alter_event_support_and_more.py  0016_alter_collaborator_birthdate.py
epic_events/models/: __init__.py  collaborator.py  company.py  contract_event.py  customer.py  department.py  location.py  mixins.py  str_template.py
epic_events/templates/: base.html
epic_events/urls/: collaborator.py  company.py  contract.py  contract_filter.py  customer.py  department.py  event.py  location.py
epic_events/views/: collaborator.py  company.py  contract.py  contract_filter.py  customer.py  department.py  event.py  location.py  (+1 more)
flake8_report/: readme.md
mission/: schéma BDD.drawio
(+55 files in other folders)
