[tool.poetry]
name = "epic-events"
version = "0.1.0"
description = ""
authors = ["Nidal Chateur <nidalchateur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django-bootstrap5 = "^23.3"
django = "^5.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
sentry-sdk = {extras = ["django"], version = "^1.39.1"}
python-decouple = "^3.8"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
coverage = "^7.3.4"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
